# night-vision/backend/openapi/nv-server-openapi.json
@@ -225,6 +225,72 @@
             "$ref": "#/components/responses/Error"
           }
         }
+      },
+      "delete": {
+        "operationId": "delete_package_source",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "202": {
+            "description": "successfully enqueued operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PackageSourceOperationResponse"
+                }
+              }
+            }
+          },
+          "4XX": {
+            "$ref": "#/components/responses/Error"
+          },
+          "5XX": {
+            "$ref": "#/components/responses/Error"
+          }
+        }
+      }
+    },
+    "/package-sources/{id}/cancel": {
+      "post": {
+        "operationId": "cancel_package_source",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "202": {
+            "description": "successfully enqueued operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PackageSourceOperationResponse"
+                }
+              }
+            }
+          },
+          "4XX": {
+            "$ref": "#/components/responses/Error"
+          },
+          "5XX": {
+            "$ref": "#/components/responses/Error"
+          }
+        }
       }
     },
     "/upgrade-assessments": {
@@ -649,11 +715,38 @@
           "npm"
         ]
       },
+      "PackageSourceOperationResponse": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "status": {
+            "$ref": "#/components/schemas/PackageSourceOperationStatus"
+          }
+        },
+        "required": [
+          "id",
+          "status"
+        ]
+      },
+      "PackageSourceOperationStatus": {
+        "type": "string",
+        "enum": [
+          "cancelled",
+          "deleting"
+        ]
+      },
       "PackageSourceStatus": {
         "oneOf": [
           {
             "type": "object",
             "properties": {
+              "attempt": {
+                "type": "integer",
+                "format": "int32"
+              },
               "createdAt": {
                 "type": "string",
                 "format": "date-time"
@@ -670,6 +763,7 @@
               }
             },
             "required": [
+              "attempt",
               "createdAt",
               "id",
               "status"
@@ -678,6 +772,48 @@
           {
             "type": "object",
             "properties": {
+              "attempt": {
+                "type": "integer",
+                "format": "int32"
+              },
+              "cancelledAt": {
+                "type": "string",
+                "format": "date-time"
+              },
+              "createdAt": {
+                "type": "string",
+                "format": "date-time"
+              },
+              "id": {
+                "type": "string",
+                "format": "uuid"
+              },
+              "status": {
+                "type": "string",
+                "enum": [
+                  "cancelled"
+                ]
+              }
+            },
+            "required": [
+              "attempt",
+              "cancelledAt",
+              "createdAt",
+              "id",
+              "status"
+            ]
+          },
+          {
+            "type": "object",
+            "properties": {
+              "attempt": {
+                "type": "integer",
+                "format": "int32"
+              },
+              "completedAt": {
+                "type": "string",
+                "format": "date-time"
+              },
               "createdAt": {
                 "type": "string",
                 "format": "date-time"
@@ -703,6 +839,8 @@
               }
             },
             "required": [
+              "attempt",
+              "completedAt",
               "createdAt",
               "id",
               "source",
@@ -713,6 +851,14 @@
           {
             "type": "object",
             "properties": {
+              "attempt": {
+                "type": "integer",
+                "format": "int32"
+              },
+              "completedAt": {
+                "type": "string",
+                "format": "date-time"
+              },
               "createdAt": {
                 "type": "string",
                 "format": "date-time"
@@ -747,6 +893,8 @@
               }
             },
             "required": [
+              "attempt",
+              "completedAt",
               "createdAt",
               "id",
               "source",
@@ -759,12 +907,20 @@
           {
             "type": "object",
             "properties": {
+              "attempt": {
+                "type": "integer",
+                "format": "int32"
+              },
               "createdAt": {
                 "type": "string",
                 "format": "date-time"
               },
               "diagnostic": {
                 "type": "string"
+              },
+              "finishedAt": {
+                "type": "string",
+                "format": "date-time"
               },
               "id": {
                 "type": "string",
@@ -785,8 +941,10 @@
               }
             },
             "required": [
+              "attempt",
               "createdAt",
               "diagnostic",
+              "finishedAt",
               "id",
               "previousVersionedPackages",
               "status"
